--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,541 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
+
+body {
+  font-family: 'Roboto', sans-serif;
+  min-width: 360px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+::-webkit-scrollbar {
+  width: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.hero-banner {
+  width: 100%;
+  height: 90vh;
+  position: relative;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.hero-banner > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+  z-index: -1;
+  filter: brightness(90%);
+}
+
+.header {
+  display: flex;
+  width: 100%;
+  height: 100px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header__div {
+  display: flex;
+  align-items: center;
+  margin-left: 5%;
+}
+
+.header__div > h1 {
+  color: white;
+  letter-spacing: 1px;
+}
+
+.header__div > img {
+  width: 35px;
+  height: 35px;
+}
+
+.header > button {
+  color: white;
+  background-color: rgb(48, 167, 215);
+  border: none;
+  padding: 10px 25px;
+  border-radius: 50px;
+  margin-right: 5%;
+  font-size: 1em;
+  cursor: pointer;
+  letter-spacing: 1.5px;
+}
+
+.header > button:hover {
+  background-color: rgb(77, 173, 91);
+  color: white;
+}
+
+.pokedex {
+  position: absolute;
+  top: 35%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 8em;
+  font-family: 'Dancing Script', cursive;
+  color: white;
+}
+
+.banner-footer {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  position: absolute;
+  bottom: 50px;
+}
+
+.banner-footer > p {
+  color: white;
+  margin-left: 5%;
+  border-left: 5px solid rgb(238, 213, 53);
+  padding-left: 10px;
+  font-size: 1em;
+}
+
+.social-logos {
+  display: flex;
+  align-items: center;
+  margin-right: 5%;
+  width: 170px;
+  justify-content: space-around;
+}
+
+.social-logos > img {
+  cursor: pointer;
+  width: 35px;
+}
+
+.social-logos > img:hover {
+  padding: 2px;
+  transform: scale(120%);
+}
+
+.section--about {
+  width: 100%;
+  height: 300px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background-color: rgb(238, 107, 47);
+  text-align: center;
+}
+
+.section--about > p {
+  font-size: 1em;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.section--about > button {
+  padding: 10px 25px;
+  border: none;
+  color: rgb(238, 107, 47);
+  background-color: white;
+  font-size: 1em;
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.section--about > button:hover {
+  background-color: rgb(77, 173, 91);
+  color: white;
+}
+
+.main-container {
+  display: flex;
+}
+
+.pokemon-list {
+  width: 30%;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.search-container {
+  width: 100%;
+}
+
+.search-bar {
+  width: 75%;
+  padding: 5px;
+  border: 3px solid rgb(238, 107, 47);
+  color: rgb(238, 107, 47);
+}
+
+.search-bar::placeholder {
+  color: rgb(238, 107, 47); 
+}
+
+.search-bar:focus {
+  outline: none;
+}
+
+
+.pokebox {
+ width: 100%;
+ height: 510px;
+ overflow: auto;
+}
+
+.pokebox::-webkit-scrollbar {
+  width: 7px;
+  background-color: lightgrey;
+}
+
+.pokebox::-webkit-scrollbar-thumb {
+  background-color: rgb(238, 107, 47);
+  border-radius: 20px;
+}
+
+.pokebox > input {
+  width: 75%;
+  margin: auto;
+  padding: 5px;
+}
+
+.pokebox__div--main {
+  display: flex;
+  border-bottom: 1px solid lightgray;
+  align-items: center;
+  position: relative;
+}
+
+.pokebox__div--main:hover .pokeball--black {
+  visibility: visible;
+}
+
+.pokebox__div--main .circle {
+  visibility: visible;
+}
+
+.sprite-wrapper {
+  display: block;
+}
+
+.sprite-wrapper > img {
+  width: 100px;
+}
+
+.pokebox__div--details {
+  display: flex;
+  flex-direction: column;
+}
+
+.pokebox__div--details > h1 {
+  margin: 0;
+  font-size: 1.1em;
+}
+
+.pokebox__div--details > p {
+  margin: 0;
+  font-size: 1em;
+}
+
+.circle {
+  width: 40px;
+  height: 40px;
+  margin-left: auto;
+  margin-right: 7%;
+  visibility: hidden;
+}
+
+.pokeball--black {
+  width: 45px;
+  height: 45px;
+  position: absolute;
+  right: 7%;
+  visibility: hidden;
+}
+
+.selected-container {
+  width: 55%;
+  height: 60vh;
+  box-shadow: 5px 5px 5px  5px rgba(0, 0, 0, 0.1);
+  margin-right: auto;
+  margin-left: 100px;
+  margin-top: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.selected-container > img {
+  width: 300px;
+  height: 300px;
+}
+
+.selected-pokemon-details > h1 {
+  font-size: 2em;
+  margin-bottom: 10px;
+}
+
+.selected-pokemon-details > p {
+  font-size: 1em;
+  margin: 0;
+  margin-bottom: 5px;
+  margin-left: 5px;
+}
+
+.temporary-container {
+  width: 55%;
+  height: 60vh;
+  box-shadow: 5px 5px 5px  5px rgba(0, 0, 0, 0.1);
+  margin-right: auto;
+  margin-left: 100px;
+  margin-top: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #1f1f1f;
+}
+
+.temporary-container > p {
+  color: white;
+  font-size: 1em;
+  margin-left: 5px;
+}
+
+.footer {
+  background-color: #1f1f1f;
+  width: 100%;
+}
+
+.footer > p {
+  color: white;
+  font-size: 0.7em;
+  margin: 0;
+  margin-left: 5%;
+}
+
+@media only screen and (min-width: 361px) and (max-width: 480px) {
+    .pokedex {
+      font-size: 5em;
+    }
+
+    .hero-banner {
+      height: 50vh;
+    }
+
+    .header__div > h1 {
+      font-size: 1em;
+    }
+
+    .header > button {
+      font-size: 1em;
+    }
+
+    .banner-footer {
+      justify-content: center;
+    }
+
+    .banner-footer > p {
+      display: none;
+    }
+
+    .section--about > p {
+      width: 90%;
+    }
+
+    .social-logos > img {
+      width: 20px;
+    }
+
+    .main-container {
+      display: flex;
+      flex-direction: column;
+    }
+
+    .pokemon-list {
+      width: 90%;
+      margin: auto;
+    }
+
+    .selected-container {
+      width: 90%;
+      margin: 0;
+      margin: auto !important;
+      margin-top: 20px !important;
+      flex-direction: column;
+      align-items: start;
+      height: 50vh;
+      position: relative;
+    }
+    
+    .selected-pokemon-details {
+      margin-left: 5%;
+    }
+
+    .selected-container > img {
+      position: absolute;
+      left: 35%;
+      width: 200px;
+      height: 200px;
+    }
+
+    .temporary-container {
+      width: 90%;
+      margin: auto;
+      margin-top: 20px;
+      height: 50vh;
+    }
+}
+
+@media only screen and (min-width: 481px) and (max-width: 576px) {
+  .pokedex {
+    font-size: 5em;
   }
-  to {
-    transform: rotate(360deg);
+
+  .hero-banner {
+    height: 50vh;
+  }
+
+  .header__div > h1 {
+    font-size: 1em;
+  }
+
+  .header > button {
+    font-size: 1em;
+  }
+
+  .banner-footer {
+    justify-content: center;
+  }
+
+  .banner-footer > p {
+    display: none;
+  }
+
+  .section--about > p {
+    width: 90%;
+  }
+
+  .social-logos > img{
+    width: 25px;
+  }
+
+  .main-container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .pokemon-list {
+    width: 90%;
+    margin: auto;
+  }
+
+  .selected-container {
+    width: 90%;
+    margin: 0;
+    margin: auto !important;
+    margin-top: 20px !important;
+    flex-direction: column;
+    align-items: start;
+    height: 50vh;
+    position: relative;
+  }
+  
+  .selected-pokemon-details {
+    margin-left: 5%;
+  }
+
+  .selected-container > img {
+    position: absolute;
+    left: 30%;
+  }
+
+  .temporary-container {
+    width: 90%;
+    margin: auto;
+    margin-top: 20px;
+    height: 50vh;
+  }
+}
+
+@media only screen and (min-width: 577px) and (max-width: 768px) {
+  .pokedex {
+    font-size: 5em;
+  }
+
+  .hero-banner {
+    height: 50vh;
+  }
+
+  .header__div > h1 {
+    font-size: 1em;
+  }
+
+  .header > button {
+    font-size: 1em;
+  }
+
+  .banner-footer {
+    justify-content: center;
+  }
+
+  .banner-footer > p {
+    display: none;
+  }
+
+  .section--about > p {
+    width: 90%;
+  }
+
+  .social-logos > img {
+    width: 25px;
+  }
+
+  .main-container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .pokemon-list {
+    width: 90%;
+    margin: auto;
+  }
+
+  .selected-container {
+    width: 90%;
+    margin: 0;
+    margin: auto !important;
+    margin-top: 20px !important;
+    flex-direction: column;
+    align-items: start;
+    height: 50vh;
+    position: relative;
+  }
+  
+  .selected-pokemon-details {
+    margin-left: 5%;
+  }
+
+  .selected-container > img {
+    position: absolute;
+    left: 30%;
+  }
+
+  .temporary-container {
+    width: 90%;
+    margin: auto;
+    margin-top: 20px;
+    height: 50vh;
+  }
+}
+
+@media only screen and (min-width: 769px) and (max-width: 992px) {
+  .temporary-container {
+    width: 90%;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-top: 15%;
+    height: 50vh;
+  }
+
+  .selected-container {
+    width: 90%;
+    margin-right: 5%;
+    margin-left: 5%;
+    margin-top: 15%;
+    height: 50vh;
+ 
   }
 }
