--- a/src/App.css
+++ b/src/App.css
@@ -112,7 +112,7 @@ body {
 
 .section--about {
   width: 100%;
-  height: 300px;
+  height: 40vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -331,6 +331,10 @@ body {
       display: none;
     }
 
+    .section--about {
+      height: 30vh;
+    }
+
     .section--about > p {
       width: 90%;
     }
@@ -404,6 +408,10 @@ body {
     display: none;
   }
 
+  .section--about {
+    height: 30vh;
+  }
+
   .section--about > p {
     width: 90%;
   }
@@ -473,6 +481,10 @@ body {
 
   .banner-footer > p {
     display: none;
+  }
+
+  .section--about {
+    height: 30vh;
   }
 
   .section--about > p {
