--- a/src/App.css
+++ b/src/App.css
@@ -24,24 +24,13 @@ body {
   overflow: hidden;
 }
 
-
-::-webkit-scrollbar {
-  width: 0;
-}
-
 .header__div {
   width: 100%;
   display: flex;
-  background-color: black;
   height: 50px;
   align-items: center;
   margin-top: 10px;
-  --offset: 60.8%;
-  background-image: linear-gradient(
-      115deg,
-      rgba(0, 0, 0, 0.15) var(--offset),
-      rgb(53, 53, 53) var(--offset)
-  )
+  background: linear-gradient(115deg, #ddd3d8 60.8%, black 57.7%);
 }
 
 .header__div--left {
@@ -52,7 +41,7 @@ body {
 
 .header__div--left > h1 {
   font-size: 1.6em;
-  color: white;
+  color: black;
   margin: 0;
   margin-left: 25px;
 }
@@ -108,48 +97,37 @@ body {
 }
 
 .pokebox__div {
-  width: 30%;
-}
-
-.search-container {
-  width: 100%;
-}
-
-.search-bar {
-  width: 75%;
-  padding: 5px;
-  border: 3px solid rgb(238, 107, 47);
-  color: rgb(238, 107, 47);
-}
-
-.search-bar::placeholder {
-  color: rgb(238, 107, 47); 
-}
-
-.search-bar:focus {
-  outline: none;
+  width: 36%;
+  margin-right: 20px;
 }
 
 .pokebox__div--pc {
   width: 100%;
-  height: 84vh;
+  height: 86vh;
   overflow: auto;
 }
 
-.pokebox::-webkit-scrollbar {
-  width: 7px;
-  background-color: lightgrey;
+.pokebox__div--box {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  cursor: pointer ;
+  height: 45px;
+  border-radius: 25px;
+  margin-bottom: 5px;
+  margin-top: 5px;
 }
 
-.pokebox::-webkit-scrollbar-thumb {
-  background-color: rgb(238, 107, 47);
-  border-radius: 20px;
+.pokebox__div--box:hover {
+  background: linear-gradient(115deg,#f0501d 35% , black 35%);
 }
 
-.pokebox > input {
-  width: 75%;
-  margin: auto;
-  padding: 5px;
+.pokebox__div--box > h1 {
+  font-size: 1em;
+}
+
+.pokebox__div--box:hover > h1 {
+  color: white;
 }
 
 .pokebox__div--icon-no {
@@ -167,21 +145,6 @@ body {
   margin-right: 5px;
 }
 
-.pokebox__div--box {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  cursor: pointer ;
-}
-
-.pokebox__div--box > h1 {
-  font-size: 1em;
-}
-
-.pokebox__div--pokeballs {
-  position: relative;
-}
-
 .pokeball--black {
   width: 25px;
   height: 25px;
@@ -191,8 +154,16 @@ body {
 .pokeball--white {
   width: 25px;
   height: 25px;
-  position: absolute;
-  visibility: hidden;
+  display: none;
+  margin-right: 20px;
+}
+
+.pokebox__div--box:hover .pokeball--black {
+  display: none;
+}
+
+.pokebox__div--box:hover .pokeball--white {
+  display: block;
 }
 
 .pokemon-details__div {
@@ -331,248 +302,27 @@ body {
   color: white;
 }
 
-@media only screen and (min-width: 361px) and (max-width: 480px) {
-    .pokedex {
-      font-size: 5em;
-    }
-
-    .hero-banner {
-      height: 50vh;
-    }
-
-    .header__div > h1 {
-      font-size: 1em;
-    }
-
-    .header > button {
-      font-size: 1em;
-    }
-
-    .banner-footer {
-      justify-content: center;
-    }
-
-    .banner-footer > p {
-      display: none;
-    }
-
-    .section--about {
-      height: 30vh;
-    }
-
-    .section--about > p {
-      width: 90%;
-    }
-
-    .social-logos > img {
-      width: 20px;
-    }
-
-    .main-container {
-      display: flex;
-      
-    }
-
-    .pokebox__div {
-      width: 90%;
-      margin: auto;
-    }
-
-    .selected-container {
-      width: 90%;
-      margin: 0;
-      margin: auto !important;
-      margin-top: 20px !important;
-      flex-direction: column;
-      align-items: start;
-      height: 50vh;
-      position: relative;
-    }
-    
-    .selected-pokemon-details {
-      margin-left: 5%;
-    }
-
-    .selected-container > img {
-      position: absolute;
-      left: 35%;
-      width: 200px;
-      height: 200px;
-    }
-
-    .temporary-container {
-      width: 90%;
-      margin: auto;
-      margin-top: 20px;
-      height: 50vh;
-    }
+.search-container {
+  width: 100%;
 }
 
-@media only screen and (min-width: 481px) and (max-width: 576px) {
-  .pokedex {
-    font-size: 5em;
-  }
-
-  .hero-banner {
-    height: 50vh;
-  }
-
-  .header__div > h1 {
-    font-size: 1em;
-  }
-
-  .header > button {
-    font-size: 1em;
-  }
-
-  .banner-footer {
-    justify-content: center;
-  }
-
-  .banner-footer > p {
-    display: none;
-  }
-
-  .section--about {
-    height: 30vh;
-  }
-
-  .section--about > p {
-    width: 90%;
-  }
-
-  .social-logos > img{
-    width: 25px;
-  }
-
-  .main-container {
-    display: flex;
-    flex-direction: column;
-  }
-
-  .pokebox__div {
-    width: 90%;
-    margin: auto;
-  }
-
-  .selected-container {
-    width: 90%;
-    margin: 0;
-    margin: auto !important;
-    margin-top: 20px !important;
-    flex-direction: column;
-    align-items: start;
-    height: 50vh;
-    position: relative;
-  }
-  
-  .selected-pokemon-details {
-    margin-left: 5%;
-  }
-
-  .selected-container > img {
-    position: absolute;
-    left: 30%;
-  }
-
-  .temporary-container {
-    width: 90%;
-    margin: auto;
-    margin-top: 20px;
-    height: 50vh;
-  }
+.search-bar {
+  width: 75%;
+  padding: 5px;
+  border: 3px solid rgb(238, 107, 47);
+  color: rgb(238, 107, 47);
 }
 
-@media only screen and (min-width: 577px) and (max-width: 768px) {
-  .pokedex {
-    font-size: 5em;
-  }
-
-  .hero-banner {
-    height: 50vh;
-  }
-
-  .header__div > h1 {
-    font-size: 1em;
-  }
-
-  .header > button {
-    font-size: 1em;
-  }
-
-  .banner-footer {
-    justify-content: center;
-  }
-
-  .banner-footer > p {
-    display: none;
-  }
-
-  .section--about {
-    height: 30vh;
-  }
-
-  .section--about > p {
-    width: 90%;
-  }
-
-  .social-logos > img {
-    width: 25px;
-  }
-
-  .main-container {
-    display: flex;
-    flex-direction: column;
-  }
-
-  .pokebox__div {
-    width: 90%;
-    margin: auto;
-  }
-
-  .selected-container {
-    width: 90%;
-    margin: 0;
-    margin: auto !important;
-    margin-top: 20px !important;
-    flex-direction: column;
-    align-items: start;
-    height: 50vh;
-    position: relative;
-  }
-  
-  .selected-pokemon-details {
-    margin-left: 5%;
-  }
-
-  .selected-container > img {
-    position: absolute;
-    left: 30%;
-  }
-
-  .temporary-container {
-    width: 90%;
-    margin: auto;
-    margin-top: 20px;
-    height: 50vh;
-  }
+.search-bar::placeholder {
+  color: rgb(238, 107, 47); 
 }
 
-@media only screen and (min-width: 769px) and (max-width: 992px) {
-  .temporary-container {
-    width: 90%;
-    margin-left: 5%;
-    margin-right: 5%;
-    margin-top: 15%;
-    height: 50vh;
-  }
+.search-bar:focus {
+  outline: none;
+}
 
-  .selected-container {
-    width: 90%;
-    margin-right: 5%;
-    margin-left: 5%;
-    margin-top: 15%;
-    height: 50vh;
- 
-  }
+.pokebox > input {
+  width: 75%;
+  margin: auto;
+  padding: 5px;
 }
