--- a/src/pokemon-details.css
+++ b/src/pokemon-details.css
@@ -2,20 +2,22 @@
     width: 350px;
     display: flex;
     flex-direction: column;
-    border-radius: 10px;
+    position: relative;
+    left: 100px;
     border: none;
-    overflow: hidden;
+   
 }
 
 .pokemon-details__div--top-most {
     display: flex;
+    border-radius: 5px;
     align-items: center;
     justify-content: space-between;
     width: 100%;
     --offset: 35.8%;
     background-image: linear-gradient(
       115deg,
-      rgba(0, 0, 0, 0.15) var(--offset),
+      #f0501d var(--offset),
       rgb(0 , 0, 0) var(--offset)
   )
 }
@@ -31,8 +33,8 @@
 }
 
 .pokemon-details__div--icon-no > img {
-    width: 40px;
-    height: 40px;
+    width: 35px;
+    height: 35px;
     margin-right: 5px;
 }
 
@@ -41,12 +43,13 @@
 }
 
 .pokemon-details__div--wrapper > img {
-    width: 200px;
+    width: 300px;
 }
 
 .pokemon-details__div--details {
     display: flex;
     width: 100%;
+    margin-bottom: 10px;
 }
 
 .pokemon-details__div--left {
@@ -78,12 +81,24 @@
 .pokemon-details__div--stat {
     display: flex;
     width: 100%;
-    background-color: darkslategray;
+    background-color: #5a5a58;
     text-align: center;
 }
 
-.pokemon-details__div--stat > p {
-    color: white;
-    margin: 10px;
+.pokemon-details__div--stat-name {
     width: 50%;
+    text-align: center;
+}
+
+.pokemon-details__div--stat-name > p {
+    color: white;
+}
+
+.pokemon-details__div--stat-value {
+    width: 50%;
+    text-align: center;
+}
+
+.pokemon-details__div--stat-value > p {
+    color: white;
 }
