--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,6 @@
 
 body {
   font-family: 'Roboto', sans-serif;
-  
   background-color: #fff;
   color: #282828;
   background-image: linear-gradient(
@@ -20,7 +19,6 @@ body {
           rgb(205, 240, 219, 0.6),
           rgb(231, 237, 245, 0.6)
       );
-  min-height: 100vh;
   overflow: hidden;
 }
 
@@ -96,11 +94,13 @@ body {
 
 .main-container {
   display: flex;
+  justify-content: end;
 }
 
 .pokebox__div {
   width: 36%;
   margin-right: 20px;
+  
 }
 
 .pokebox__div--pc {
@@ -205,6 +205,7 @@ body {
   margin-bottom: 5px;
   margin-left: 5px;
 }
+
 
 .footer__div {
   background-color: black;
@@ -338,8 +339,62 @@ body {
   outline: none;
 }
 
-.pokebox > input {
-  width: 75%;
-  margin: auto;
-  padding: 5px;
+
+@media only screen and (min-width: 360px) and (max-width: 480px) {
+
+  .main-container {
+    flex-direction: column;
+    width: 90%;
+    margin: auto;
+  }
+
+  .pokebox__div {
+    width: 100%;
+  }
+
+  .pokebox__div--pc {
+    width: 100%;
+    height: 86vh;
+    overflow: auto;
+  }
+
+  .search-bar {
+    display: none;
+  }
+
+  .footer__div {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    width: 100%;
+    margin: auto;
+  }
+  
+  .footer__div--a > p {
+    display: none;
+  }
+  
+  
+  .footer__div--x > p {
+    display: none;
+  }
+  
+  
+  .footer__div--y > p {
+    display: none;
+  }
+  
+  
+  .footer__div--plus > p {
+    display: none;
+  }
+
+  .footer__div--b {
+    margin-right: 10px;
+  }
+  
+  .footer__div--b > p {
+    display: none;
+  }
+
+
 }
