--- a/src/App.css
+++ b/src/App.css
@@ -318,7 +318,7 @@ body {
 .search-container {
   width: 100%;
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   margin-right: 50px;
 }
 
