--- a/src/pokemon-details.css
+++ b/src/pokemon-details.css
@@ -107,8 +107,10 @@
 @media only screen and (min-width: 360px) and (max-width: 480px) {
     .pokemon-details__div {
         width: 100%;
+        height: 100%;
         margin: auto;
         left: 0;
+        margin-top: 10px;
     }
 
     .pokemon-details__div--wrapper > img {
