--- a/src/App.css
+++ b/src/App.css
@@ -421,5 +421,82 @@ body {
     display: none;
   }
 
+}
+
+@media only screen and (min-width: 480px) and (max-width: 992px) and (orientation: landscape) {
+
+  .header__div--left {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+  }
+
+  .header__div--pokedex > img {
+    display: block;
+    cursor: pointer;
+
+  }
+
+  .header__div--discovered {
+    margin-right: 15px;
+  }
+
+  .search-container {
+    display: none;
+  }
+
+  .search-bar {
+    display: none;
+  }
+
+  .main-container {
+    width: 95%;
+    margin-left: auto;
+  }
+
+  .pokebox__div {
+    width: 40%;
+    margin-left: auto;
+  }
+
+  .pokebox__div--pc {
+    width: 100%;
+    height: 86vh;
+    overflow: auto;
+  }
+
+  .footer__div {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    width: 100%;
+    margin: auto;
+  }
+  
+  .footer__div--a > p {
+    display: none;
+  }
+  
+  
+  .footer__div--x > p {
+    display: none;
+  }
+  
+  
+  .footer__div--y > p {
+    display: none;
+  }
+  
+  
+  .footer__div--plus > p {
+    display: none;
+  }
+
+  .footer__div--b {
+    margin-right: 10px;
+  }
+  
+  .footer__div--b > p {
+    display: none;
+  }
 
 }
