--- a/src/pokemon-details.css
+++ b/src/pokemon-details.css
@@ -116,6 +116,22 @@
     .pokemon-details__div--wrapper > img {
         width: 100px;
     }
+}
+
+
+@media only screen and (min-width: 480px) and (max-width: 992px) and (orientation: landscape) {
+    .pokemon-details__div {
+        width: 100%;
+        height: 100%;
+        margin: auto;
+        margin-right: 70px;
+        left: 0;
+        margin-top: 10px;
+    }
+
+    .pokemon-details__div--wrapper > img {
+        width: 75px;
+    }
 
     
     
