--- a/src/selected-pokemon.css
+++ b/src/selected-pokemon.css
@@ -1,7 +1,6 @@
 .selected-pokemon__div {
     width: 100%;
     height: 100vh;
-    background: linear-gradient(115deg, #fff1ff 48%, #f3533b 48% 55%, #fb7248 55%);
     display: flex;
     flex-direction: column;
     justify-content: center
@@ -38,7 +37,7 @@
 
     .selected-pokemon__div {
         width: 100%;
-        height: 100%;
+        height: 100vh;
     }
     
     .selected-pokemon__div--main {
@@ -70,3 +69,42 @@
     }
 }
 
+
+@media only screen and (min-width: 480px) and (max-width: 992px) and (orientation: landscape) {
+
+    .selected-pokemon__div {
+        width: 100%;
+        height: 100vh;
+    }
+    
+    .selected-pokemon__div--main {
+        width: 90%;
+    }
+
+    .selected-pokemon__div--main > button {
+        display: none;
+        width: 90%;
+        background-color: black;
+        color: white;
+        padding: 15px 5px;
+        margin-top: 20px;
+        border: none;
+        border-radius: 25px;
+    }
+    
+    .selected-pokemon__div--left > img {
+        width: 250px;
+        margin-left: 80px;
+    }
+    
+    .selected-pokemon__div--right {
+        width: 90%;
+    }
+    
+    .selected-pokemon__div--right > img {
+        display: block;
+        position: absolute;
+        right: 100px;
+        top: -30px;
+    }
+}
