--- a/src/pokemon-details.css
+++ b/src/pokemon-details.css
@@ -104,7 +104,21 @@
     color: white;
 }
 
-@media only screen and (min-width: 360px) and (max-width: 480px) {
+@media only screen and (min-width: 0) and (max-width: 575px) {
+    .pokemon-details__div {
+        width: 100%;
+        height: 100%;
+        margin: auto;
+        left: 0;
+        margin-top: 10px;
+    }
+
+    .pokemon-details__div--wrapper > img {
+        width: 100px;
+    }
+}
+
+@media only screen and (min-width: 576px) and (max-width: 767px) {
     .pokemon-details__div {
         width: 100%;
         height: 100%;
@@ -119,20 +133,17 @@
 }
 
 
-@media only screen and (min-width: 480px) and (max-width: 992px) and (orientation: landscape) {
+@media only screen and (min-width: 768px) and (max-width: 991px) {
     .pokemon-details__div {
         width: 100%;
         height: 100%;
         margin: auto;
-        margin-right: 70px;
         left: 0;
         margin-top: 10px;
     }
 
     .pokemon-details__div--wrapper > img {
-        width: 75px;
+        width: 100px;
     }
-
-    
-    
 }
+    
