--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@ body {
   height: 50px;
   align-items: center;
   margin-top: 10px;
-  background: linear-gradient(115deg, #dad4d8 60.8%, #333333 57.7%);
+  background: linear-gradient(115deg, #dad4d8 60.1%, #333333 57.7%);
   justify-content: space-between;
   position: relative;
 }
@@ -186,7 +186,6 @@ body {
 
 .pokemon-details__div {
   width: 55%;
-  height: 60vh;
   margin-right: auto;
   margin-left: 100px;
   margin-top: 100px;
@@ -385,7 +384,7 @@ body {
 
   .pokebox__div--pc {
     width: 100%;
-    height: 48vh;
+    height: 400px;
     overflow: auto;
   }
 
