--- a/src/pokemon-details.css
+++ b/src/pokemon-details.css
@@ -2,8 +2,7 @@
     width: 350px;
     display: flex;
     flex-direction: column;
-    position: relative;
-    left: 100px;
+    margin: auto;
     border: none;
 }
 
@@ -107,10 +106,8 @@
 @media only screen and (min-width: 0) and (max-width: 575px) {
     .pokemon-details__div {
         width: 100%;
-        height: 100%;
-        margin: auto;
-        left: 0;
-        margin-top: 10px;
+        margin-top: 25px;
+        margin-bottom: 25px;
     }
 
     .pokemon-details__div--wrapper > img {
@@ -121,10 +118,8 @@
 @media only screen and (min-width: 576px) and (max-width: 767px) {
     .pokemon-details__div {
         width: 100%;
-        height: 100%;
-        margin: auto;
-        left: 0;
-        margin-top: 10px;
+        margin-top: 25px;
+        margin-bottom: 25px;
     }
 
     .pokemon-details__div--wrapper > img {
@@ -136,14 +131,11 @@
 @media only screen and (min-width: 768px) and (max-width: 991px) {
     .pokemon-details__div {
         width: 100%;
-        height: 100%;
-        margin: auto;
-        left: 0;
-        margin-top: 10px;
+        margin-top: 25px;
+        margin-bottom: 25px;
     }
 
     .pokemon-details__div--wrapper > img {
         width: 100px;
     }
 }
-    
