--- a/src/temporary.css
+++ b/src/temporary.css
@@ -13,20 +13,26 @@
 @media only screen and (min-width: 0) and (max-width: 575px) {
     .temporary__div {
         width: 100%;
-        height: 350px;
+        height: 374px;
+        margin-top: 25px;
+        margin-bottom: 25px;
     }
 }
 
 @media only screen and (min-width: 576px) and (max-width: 767px) {
     .temporary__div {
         width: 100%;
-        height: 350px;
+        height: 374px;
+        margin-top: 25px;
+        margin-bottom: 25px;
     }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 992px) {
     .temporary__div {
         width: 100%;
-        height: 350px;
+        height: 374px;
+        margin-top: 25px;
+        margin-bottom: 25px;
     }
 }
