--- a/src/selected-pokemon.css
+++ b/src/selected-pokemon.css
@@ -2,71 +2,223 @@
     width: 100%;
     height: 100vh;
     display: flex;
-    flex-direction: column;
-    justify-content: center
+    align-items: center;
 }
 
 .selected-pokemon__div--main {
     display: flex;
+    width: 80%;
     margin: auto;
     align-items: center;
-    justify-content: space-between;
+    flex-direction: column;
+}
+
+.selected-pokemon__div--button {
+    width: 80%;
+    margin: auto;
+    display: flex;
+    justify-content: end;
+    margin-bottom: 25px;
+}
+
+.selected-pokemon__div--button > img {
+    cursor: pointer;
+}
+
+.selected-pokemon__div--img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.selected-pokemon__div--img > img {
+    width: 30%;
+    margin-right: 50px;
 }
 
 .selected-pokemon__div--main > button {
     display: none;
 }
 
-.selected-pokemon__div--left > img {
-    width: 400px;
-}
-
-.selected-pokemon__div--right {
-    position: relative;
-}
-
-.selected-pokemon__div--right > img {
-    width: 30px;
-    position: absolute;
-    right: -200px;
-    top: -100px;
-    cursor: pointer;
-}
-
-@media only screen and (min-width: 360px) and (max-width: 480px) {
+@media only screen and (min-width: 0) and (max-width: 575px) {
 
     .selected-pokemon__div {
         width: 100%;
         height: 100vh;
+        display: flex;
+        align-items: center;
     }
     
     .selected-pokemon__div--main {
+        display: flex;
+        width: 90%;
+        margin: auto;
+        align-items: center;
         flex-direction: column;
+    }
+    
+    .selected-pokemon__div--button {
+        width: 80%;
+        margin: auto;
+        display: flex;
+        justify-content: end;
+        margin-bottom: 25px;
+        display: none   ;
+    }
+    
+    .selected-pokemon__div--button > img {
+        cursor: pointer;
+    }
+    
+    .selected-pokemon__div--img {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         width: 100%;
+        flex-direction: column;
+    }
+    
+    .selected-pokemon__div--img > img {
+        width: 70%;
+        margin-right: 0;
     }
 
     .selected-pokemon__div--main > button {
         display: block;
-        width: 90%;
+        width: 100%;
+        margin-top: 25px;
         background-color: black;
         color: white;
-        padding: 15px 5px;
-        margin-top: 20px;
-        border: none;
+        padding: 15px 0;
         border-radius: 25px;
+        cursor: pointer;
+    }
+
+    .selected-pokemon__div--main > button:hover {
+        background-color: red;
     }
     
-    .selected-pokemon__div--left > img {
-        width: 250px;
-    }
-    
-    .selected-pokemon__div--right {
-        width: 90%;
-    }
-    
-    .selected-pokemon__div--right > img {
-        display: none;
-    }
 }
 
+@media only screen and (min-width: 576px) and (max-width: 767px) {
+
+    .selected-pokemon__div {
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        align-items: center;
+    }
+    
+    .selected-pokemon__div--main {
+        display: flex;
+        width: 70%;
+        margin: auto;
+        align-items: center;
+        flex-direction: column;
+    }
+    
+    .selected-pokemon__div--button {
+        width: 80%;
+        margin: auto;
+        display: flex;
+        justify-content: end;
+        margin-bottom: 25px;
+        display: none   ;
+    }
+    
+    .selected-pokemon__div--button > img {
+        cursor: pointer;
+    }
+    
+    .selected-pokemon__div--img {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        flex-direction: column;
+    }
+    
+    .selected-pokemon__div--img > img {
+        width: 60%;
+        margin-right: 0;
+    }
+
+    .selected-pokemon__div--main > button {
+        display: block;
+        width: 100%;
+        margin-top: 25px;
+        background-color: black;
+        color: white;
+        padding: 15px 0;
+        border-radius: 25px;
+        cursor: pointer;
+    }
+
+    .selected-pokemon__div--main > button:hover {
+        background-color: red;
+    }
+    
+}
+
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+
+    .selected-pokemon__div {
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        align-items: center;
+    }
+    
+    .selected-pokemon__div--main {
+        display: flex;
+        width: 60%;
+        margin: auto;
+        align-items: center;
+        flex-direction: column;
+    }
+    
+    .selected-pokemon__div--button {
+        width: 80%;
+        margin: auto;
+        display: flex;
+        justify-content: end;
+        margin-bottom: 25px;
+        display: none   ;
+    }
+    
+    .selected-pokemon__div--button > img {
+        cursor: pointer;
+    }
+    
+    .selected-pokemon__div--img {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        flex-direction: column;
+    }
+    
+    .selected-pokemon__div--img > img {
+        width: 60%;
+        margin-right: 0;
+    }
+
+    .selected-pokemon__div--main > button {
+        display: block;
+        width: 100%;
+        margin-top: 25px;
+        background-color: black;
+        color: white;
+        padding: 15px 0;
+        border-radius: 25px;
+        cursor: pointer;
+    }
+
+    .selected-pokemon__div--main > button:hover {
+        background-color: red;
+    }
+    
+}
 
