--- a/src/selected-pokemon.css
+++ b/src/selected-pokemon.css
@@ -17,7 +17,7 @@
     width: 80%;
     margin: auto;
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     margin-bottom: 25px;
 }
 
@@ -62,7 +62,7 @@
         width: 80%;
         margin: auto;
         display: flex;
-        justify-content: end;
+        justify-content: flex-end;
         margin-bottom: 25px;
         display: none   ;
     }
@@ -122,7 +122,7 @@
         width: 80%;
         margin: auto;
         display: flex;
-        justify-content: end;
+        justify-content: flex-end;
         margin-bottom: 25px;
         display: none   ;
     }
@@ -183,7 +183,7 @@
         width: 80%;
         margin: auto;
         display: flex;
-        justify-content: end;
+        justify-content: flex-end;
         margin-bottom: 25px;
         display: none   ;
     }
