--- a/src/temporary.css
+++ b/src/temporary.css
@@ -36,3 +36,15 @@
         margin-bottom: 25px;
     }
 }
+
+@media only screen and (min-width: 0) and (max-width: 767px) and (orientation: landscape) {
+    .temporary__div {
+        display: none;
+    }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) and (orientation: landscape) {
+    .temporary__div {
+        display: none;
+    }
+}
