add responsiveness for landscape

--- a/src/pokemon-details.css
+++ b/src/pokemon-details.css
@@ -104,6 +104,7 @@
 }
 
 @media only screen and (min-width: 0) and (max-width: 575px) {
+
     .pokemon-details__div {
         width: 100%;
         margin-top: 25px;
@@ -116,6 +117,7 @@
 }
 
 @media only screen and (min-width: 576px) and (max-width: 767px) {
+
     .pokemon-details__div {
         width: 100%;
         margin-top: 25px;
@@ -129,6 +131,7 @@
 
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
+
     .pokemon-details__div {
         width: 100%;
         margin-top: 25px;
@@ -141,6 +144,14 @@
 }
 
 @media only screen and (min-width: 0) and (max-width: 767px) and (orientation: landscape) {
+
+    .pokemon-details__div {
+        display: none;
+    }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) and (orientation: landscape) {
+    
     .pokemon-details__div {
         display: none;
     }
