--- a/src/no-image-card.css
+++ b/src/no-image-card.css
@@ -115,6 +115,7 @@
 }
 
 @media only screen and (min-width: 576px) and (max-width: 767px) {
+
     .no-image-card__div {
         width: 100%;    
     }
@@ -123,6 +124,7 @@
         margin-top: 20px;
         margin-bottom: 20px;
     }
+    
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -137,4 +139,28 @@
 }
 
 
+@media only screen and (min-width: 0) and (max-width: 767px) and (orientation: landscape) {
 
+    .no-image-card__div {
+        width: 40%;    
+    }
+
+    .no-image-card__div--details {
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) and (orientation: landscape) {
+
+    .no-image-card__div {
+        width: 40%;    
+    }
+
+    .no-image-card__div--details {
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+
+}
